compiler/tests/fail/register_allocation/arm-m4/too_many_args.jazz
export
fn too_many_args(reg u32 a b c d e) {}
